Kubeflow/hsds_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hsds
  name: hsds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hsds
  template:
    metadata:
      labels:
        app: hsds
    spec:
      containers:
        -
          name: sn
          image: "hdfgroup/hsds:v0.7beta8"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: config
            mountPath: "/config"

          ports:
            -
              containerPort: 5101
        -
          name: dn
          image: "hdfgroup/hsds:v0.7beta8"
          lifecycle:
            preStop:
              exec:
                command: ["/usr/bin/curl", "-X", "DELETE", "http://127.0.0.1:6101/prestop"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: config
            mountPath: "/config/"
          ports:
            -
              containerPort: 6101
      volumes:
      - name: config
        configMap:
          name: hsds-config
